# imessage_monitor

./: .gitignore  CLAUDE.md  README.md  config.toml  example_usage.py  pyproject.toml  realtime_test.py
.github/workflows/: publish.yml
resources/: apple_shortcuts_vs_applescript.md  applescript_guide.md  imessage_db_SERVICE_LAYER_GUIDE.md
scratch_scripts/: test_apple_db.py
src/imessage_monitor/: __init__.py  config.py  display.py  exceptions.py  message_parser.py  monitor.py  outbound.py  utils.py  watchdog.py
tests/: test_config.py  test_outbound.py
