[project]
name = "imessage-monitor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Christian Hale", email = "bhschristian@gmail.com" }
]
requires-python = ">=3.10"
dependencies = []

[project.scripts]
imessage-monitor = "imessage_monitor:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
